@@ -490,7 +490,7 @@
       <field cname="colors" type="GdkColor*"/>
       <field cname="visual" type="GdkVisual*"/>
       <field cname="windowing_data" type="gpointer"/>
-      <method name="AllocColor" cname="gdk_colormap_alloc_color">
+      <method name="AllocColor" cname="gdk_colormap_alloc_color" hidden="1">
         <return-type type="gboolean"/>
         <parameters>
           <parameter type="GdkColor*" name="color"/>
