@@ -148,6 +148,17 @@
   </data>
 
 </rule>
+<rule>
+  <class name="GdkColormap">
+    <method>AllocColor</method>
+  </class>
+  <data>
+    <attribute target="method">
+      <name>hidden</name>
+      <value>1</value>
+    </attribute>
+  </data>
+</rule>
 
 <rule>
   <class name="GdkPixbufLoader">
@@ -160,5 +171,4 @@
     </attribute>
   </data>
 </rule>
-
 </metadata>
