@@ -1,3 +1,12 @@
+2003-02-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* api/gdk-api.xml:
+	* sources/Gdk.metadata: hide GdkColormap.AllocColor.
+
+	* gdk/Colormap.custom: AllocColor is here.
+
+	* gconf/tools/schemagen.cs: XmlDocument.Load (string) takes an Uri.
+
 2003-02-28  Miguel de Icaza  <miguel@ximian.com>
 
 	* gdk/Color.custom: Added constructors from System.Drawing.Color
